grub2 (1.98+20100722-2) UNRELEASED; urgency=low

  [ Updated translations ]
  * German (Martin Eberhard Schauer).  Closes: #590108
  * Spanish (Francisco Javier Cuadrado).  Closes: #590448

  [ Christian Perrier ]
  * Dutch (Paul Gevers).  Closes: #590864

 -- Christian Perrier <bubulle@debian.org>  Sun, 25 Jul 2010 15:04:30 +0200

grub2 (1.98+20100722-1) unstable; urgency=low

  * New Bazaar snapshot.
    - Don't count named RAID arrays when looking for unused array numbers.

  [ Colin Watson ]
  * Merge from Ubuntu:
    - grub-common Breaks: lupin-support (<< 0.30) due to a grub-mkimage
      syntax change (lupin-support isn't in Debian, but this is harmless
      anyway).

 -- Colin Watson <cjwatson@debian.org>  Thu, 22 Jul 2010 14:33:34 +0100

grub2 (1.98+20100720-1) unstable; urgency=low

  * New Bazaar snapshot.
    - Link to Info documentation on changes from GRUB Legacy in README
      (closes: #502623).
    - Add support for mdadm metadata formats 1.x (closes: #492897).

  [ Aaron M. Ucko ]
  * Compare -trunk kernels earlier than numeric ABIs (closes: #568160).

  [ Colin Watson ]
  * Remove /boot/grub/device.map, /boot/grub/grubenv,
    /boot/grub/installed-version, and /boot/grub/locale/ on purge, if
    permitted (closes: #547679).
  * Convert from CDBS to dh.
  * Use exact-version dependencies in grub2 and grub-efi, to reduce
    potential confusion.
  * Raise priority of grub-common and grub-pc to optional (also done in
    archive overrides).
  * Copy-edit debian/presubj.
  * Use 'mktemp -t' rather than hardcoding /tmp (closes: #589537).

  [ Mario 'BitKoenig' Holbe ]
  * Update /etc/grub.d/05_debian_theme to handle multiple entries in
    GRUB_TERMINAL_OUTPUT (closes: #589322).

  [ Updated translations ]
  * Simplified Chinese (zh_CN.po) by YunQiang Su (closes: #589013).
  * Russian (ru.po) by Yuri Kozlov (closes: #589244).
  * Swedish (sv.po) by Martin Bagge / brother (closes: #589259).
  * Bulgarian (bg.po) by Damyan Ivanov (closes: #589272).