@@ -7,7 +7,11 @@ grub2 (1.98+20100722-2) UNRELEASED; urgency=low
   [ Christian Perrier ]
   * Dutch (Paul Gevers).  Closes: #590864
 
- -- Christian Perrier <bubulle@debian.org>  Sun, 25 Jul 2010 15:04:30 +0200
+  [ Robert Millan ]
+  * postinst.in: Fill in device size and model information on GNU/kFreeBSD,
+    using camcontrol.
+
+ -- Robert Millan <rmh@gnu.org>  Sat, 31 Jul 2010 21:16:31 +0200
 
 grub2 (1.98+20100722-1) unstable; urgency=low
 
